--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,12 +20,14 @@
 
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResultList"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       app:layout_constraintTop_toBottomOf="@+id/mainTitle"
-       app:layout_constraintBottom_toBottomOf="parent"
+       android:layout_width="404dp"
+       android:layout_height="631dp"
+       app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+       app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
-       app:layout_constraintRight_toRightOf="parent"/>
+       app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/mainTitle"
+       app:layout_constraintVertical_bias="0.527" />
 
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
