--- a/app/src/main/res/layout/layout_tem.xml
+++ b/app/src/main/res/layout/layout_tem.xml
@@ -49,7 +49,7 @@
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_img"
            app:layout_constraintTop_toBottomOf="@+id/tv_id"
-           app:layout_constraintVertical_bias="0.209"
+           app:layout_constraintVertical_bias="0.177"
            tools:text="Result title" />
 
        <TextView
@@ -64,8 +64,22 @@
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_img"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
-           app:layout_constraintVertical_bias="0.406"
+           app:layout_constraintVertical_bias="0.393"
            tools:text="Result text" />
+
+       <TextView
+           android:id="@+id/tv_isOpened"
+           android:layout_width="0dp"
+           android:layout_height="wrap_content"
+           android:textColor="@android:color/black"
+           android:textSize="14sp"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintHorizontal_bias="0.0"
+           app:layout_constraintStart_toEndOf="@+id/tv_img"
+           app:layout_constraintTop_toBottomOf="@+id/tv_text"
+           app:layout_constraintVertical_bias="1.0"
+           tools:text="Unread" />
 
    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
