--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,22 @@
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>
 
+   <SearchView
+       android:id="@+id/searchView"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:layout_constraintBottom_toTopOf="@+id/rvResultList"
+       app:layout_constraintTop_toBottomOf="@+id/mainTitle"/>
+
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResultList"
-       android:layout_width="404dp"
-       android:layout_height="631dp"
+       android:layout_width="399dp"
+       android:layout_height="593dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/mainTitle"
+       app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:layout_constraintVertical_bias="0.527" />
 
    <com.google.android.material.bottomnavigation.BottomNavigationView
