--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,34 +7,15 @@
     android:background="#EEEEEE"
     tools:context=".MainActivity">
 
-   <TextView
-       android:id="@+id/mainTitle"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="Events"
-       android:textSize="34dp"
-       app:layout_constraintTop_toTopOf="parent"
+   <FrameLayout
+       android:id="@+id/flFragment"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
-       app:layout_constraintStart_toStartOf="parent"/>
-
-   <SearchView
-       android:id="@+id/searchView"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       app:layout_constraintBottom_toTopOf="@+id/rvResultList"
-       app:layout_constraintTop_toBottomOf="@+id/mainTitle"/>
-
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/rvResultList"
-       android:layout_width="399dp"
-       android:layout_height="593dp"
-       app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-       app:layout_constraintHorizontal_bias="0.484"
-       app:layout_constraintLeft_toLeftOf="parent"
-       app:layout_constraintRight_toRightOf="parent"
-       app:layout_constraintTop_toBottomOf="@+id/searchView"
-       app:layout_constraintVertical_bias="0.527" />
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent" />
 
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
