--- a/app/src/main/res/layout/closing_header.xml
+++ b/app/src/main/res/layout/closing_header.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="Opening Ceremony Tickets"
+        android:text="Closing Ceremony Tickets"
         android:textSize="18sp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints" />
