--- a/app/src/main/res/layout/fragment_create_ticket.xml
+++ b/app/src/main/res/layout/fragment_create_ticket.xml
@@ -64,8 +64,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
         android:text="Create"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/previewImageView" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
