--- a/app/src/main/res/layout/fragment_ticket_details.xml
+++ b/app/src/main/res/layout/fragment_ticket_details.xml
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".TicketDetailsFragment">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ticket Details"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/viewSS"
         android:layout_width="match_parent"
