--- a/app/src/main/res/layout/fragment_ticket_details.xml
+++ b/app/src/main/res/layout/fragment_ticket_details.xml
@@ -7,23 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".TicketDetailsFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ticket Details"/>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/viewSS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints">
+
         <ImageView
             android:id="@+id/ticketImageView"
             android:layout_width="0dp"
             android:layout_height="200dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="76dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/ticketTypeTextView"
@@ -31,7 +29,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/ticketImageView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/ticketNameTextView"
@@ -39,7 +38,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/ticketTypeTextView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/ticketTimeTextView"
@@ -47,7 +47,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/ticketNameTextView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/ticketSeatTextView"
@@ -55,7 +56,17 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/ticketTimeTextView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textAlignment="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ticket Details"
+            android:textSize="36dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="0dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
